delete all pagination impl, reunify previous separation